--- a/css/main.css
+++ b/css/main.css
@@ -207,6 +207,13 @@ HEADER, NAV
 .innerNav ul li a:hover {
   font-weight: bold;
 }
+
+.innerNav ul li a.clicked {
+  font-weight: bold;
+}
+.innerNav ul li a.clicked::before {
+  width: 60%;
+}
 /************************ 
 VISUAL
  ************************/
@@ -245,7 +252,7 @@ VISUAL
 }
 .visualTxt {
   position: absolute;
-  top: 25%;
+  top: 35%;
   left: 5rem;
   margin: 15px 8%;
   color: #fff;
@@ -254,11 +261,11 @@ VISUAL
 
 @keyframes slideIn {
   from {
-    top: 35%;
+    top: 45%;
     opacity: 0;
   }
   to {
-    top: 25%;
+    top: 35%;
     opacity: 1;
   }
 }
@@ -282,6 +289,7 @@ VISUAL
   margin-top: 2rem;
   font-size: 1.1rem;
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .visualBtn {
@@ -367,9 +375,9 @@ VISUAL
   justify-content: center;
   position: relative;
 }
-.visualinner form div {
+/* .visualinner form div {
   height: 90px;
-}
+} */
 .visualinner form div:not(:nth-child(5)) {
   padding: 1rem 0;
   position: relative;
@@ -450,14 +458,14 @@ RECOMMOND
 
 .rcmLeft {
   background-color: var(--sub-color);
-  width: 30%;
-  height: 600px;
-  padding: 2rem 0 0 2rem;
+  width: 22%;
+  height: 500px;
+  padding: 2rem 0 0 1rem;
   position: relative;
 }
 .rcmLeft h3 {
   color: #fff;
-  font-size: 40px;
+  font-size: var(--fontSize-title-3);
 }
 
 .rcmLeft h3 span {
@@ -471,12 +479,12 @@ RECOMMOND
 
 .rcmLeft p {
   color: #fff;
-  font-size: 20px;
+  font-size: var(--fontSize-body-3);
   margin-top: 30px;
 }
 .rcmBox {
   background-color: #ffffff;
-  width: 70%;
+  width: 78%;
   position: relative;
   display: flex;
   justify-content: center;
@@ -500,7 +508,7 @@ RECOMMOND
 
 .rcmImg {
   overflow: hidden;
-  height: 30vh;
+  height: 25vh;
 }
 .rcmImg img {
   width: 100%;
@@ -531,10 +539,12 @@ RECOMMOND
 .rcmBoxTxt h3 {
   color: var(--main-color);
   font-size: var(--fontSize-body-2);
+  margin-bottom: 5px;
 }
 .rcmBoxTxt h4 {
   color: #232939;
   font-size: var(--fontSize-body-3);
+  margin-bottom: 20px;
 }
 .rcmBoxTxt h2 {
   color: var(--dark-01);
@@ -559,10 +569,10 @@ RECOMMOND
   z-index: 1;
 }
 .rcmBtn .prevBtn {
-  left: 3rem;
+  left: 6.5rem;
 }
 .rcmBtn .nextBtn {
-  right: 3rem;
+  right: 6.5rem;
   left: initial;
 }
 
@@ -573,7 +583,7 @@ RECOMMOND
 }
 .domestic-img2 {
   bottom: 12rem;
-  left: 10rem;
+  left: 12rem;
 }
 .overseas-img1 {
   bottom: 4rem;
@@ -719,8 +729,8 @@ ZIP
   font-size: 1rem;
 }
 .zipText h2 {
-  font-size: 2rem;
-  margin: 0;
+  font-size: var(--fontSize-body-1);
+  margin-top: 0.5rem;
 }
 .zipBar {
   width: 100%;
@@ -855,9 +865,10 @@ SNS
   width: 80%;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   gap: 1.5% 1%;
-  height: 50vh;
   overflow: hidden;
+  height: 50vh;
   transition: opacity 1s ease-in-out;
 }
 #snsPhotoWrap2 {
