--- a/css/responsive.css
+++ b/css/responsive.css
@@ -363,6 +363,8 @@
   .snsPhotoWrap,
   #snsPhotoWrap2 {
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    height: 60vh;
     gap: 1rem;
   }
   .snsPhotoWrap .snsPhoto:nth-of-type(1) {
@@ -460,7 +462,7 @@
     padding: 1rem;
   }
   .mySwiper1 .packImg {
-    height: 40vh;
+    height: 24vh;
   }
   .buttons .nextBtn {
     right: 2rem;
@@ -481,7 +483,7 @@
     padding-top: var(--pTop-2);
   }
   .discounText h3 {
-    font-size: 1.5rem;
+    font-size: var(--fontSize-title-2);
   }
 
   .discounText h3 + p {
@@ -554,7 +556,7 @@
     height: 40vh !important;
   }
   #adver .slide-captions {
-    top: 13%;
+    top: 20%;
   }
   #clickBest {
     padding-bottom: var(--pBottom-2);
@@ -767,7 +769,7 @@
   }
   .rcmLeft {
     width: 100%;
-    height: 30vh;
+    height: 26vh;
     padding: initial;
     padding-top: 5px;
   }
