--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,7 +34,9 @@
     margin: 0;
     justify-content: initial;
   }
-
+  .visualSearch .visualinner form input {
+    height: initial;
+  }
   .visualinner form div:nth-child(1) {
     width: 50%;
     border-bottom: 1px solid black;
@@ -59,6 +61,9 @@
     height: 100%;
     padding: 1.5rem 0;
   }
+  .domestic-img2 {
+    z-index: 1;
+  }
   .zipText h2 {
     font-size: 1.5rem;
   }
@@ -75,6 +80,12 @@
   #advertise .slide-captions .current-subcon:hover {
     background-color: var(--main-color);
     border: none;
+  }
+  .rcmBtn .prevBtn {
+    left: 3.5rem;
+  }
+  .rcmBtn .nextBtn {
+    right: 3.5rem;
   }
   /* 1280footer */
   .footer_top .fotoText {
@@ -117,7 +128,7 @@
     position: relative;
   }
   .mySwiper1 .packImg {
-    height: 50vh;
+    height: 30vh;
   }
   .packageWrap {
     padding-bottom: 3rem;
@@ -1107,7 +1118,7 @@
   #adver .mySwiper3 {
     height: 30vh !important;
   }
-#advertise .swiper-slide,
+  #advertise .swiper-slide,
   #adver .swiper-slide {
     filter: brightness(80%);
   }
@@ -1192,7 +1203,7 @@
   .answer {
     font-size: 1rem;
   }
-  .faqCon .head h3{
+  .faqCon .head h3 {
     font-size: 1.1rem;
   }
   .faqText p,
@@ -1224,18 +1235,18 @@
   .announCon {
     grid-template-columns: 1fr;
   }
-  .announCon li h3 + p{
+  .announCon li h3 + p {
     font-size: 1rem;
   }
   /* login */
   #reserWrap .mainTxt {
     padding-top: 15rem;
   }
-  #allMem{
-    width:75%;
+  #allMem {
+    width: 75%;
     padding-bottom: 10rem;
   }
-  .allHead h2{
+  .allHead h2 {
     font-size: 1.1rem;
   }
 }
@@ -1243,7 +1254,7 @@
 375px
 *************************/
 @media (max-width: 375px) {
-  /* 375main */
+  /* 375index */
   #header {
     padding: 1.5rem 0;
   }
@@ -1251,6 +1262,16 @@
     font-size: 1.5rem;
   }
 
+  @keyframes slideIn {
+    from {
+      top: 35%;
+      opacity: 0;
+    }
+    to {
+      top: 30%;
+      opacity: 1;
+    }
+  }
   h1 img {
     width: 40%;
     display: flex;
@@ -1394,6 +1415,71 @@
   .visualSearch .visualinner form input {
     height: initial;
   }
+
+  /* 375zip */
+  #zipWrap {
+    padding-top: 5rem;
+    padding-bottom: 10rem;
+  }
+  #zipWrap .subTitle {
+    width: 80%;
+    margin: 0 auto;
+  }
+  #advertise .current-subcon {
+    width: 100px;
+    height: 40px;
+    font-size: 0.8rem;
+  }
+  .zipBoxWrap {
+    gap: 3rem;
+  }
+  .zipText {
+    padding: 1rem;
+  }
+  .zipText h3 {
+    font-size: 0.7rem;
+  }
+  .zipText h2 {
+    font-size: 0.7rem;
+  }
+  .zipLeft {
+    width: 60%;
+    margin: 0 auto;
+  }
+  .zipLeft ul {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+    gap: 1rem;
+  }
+  .zipLeft ul li {
+    min-width: initial;
+    width: 100%;
+  }
+  .zipLeft ul li p {
+    font-size: 1rem;
+    text-align: center;
+    margin-left: 0;
+  }
+  .zipRight {
+    width: 100%;
+  }
+  .zipRight .mySwiper2 {
+    width: 90%;
+  }
+  .zipBar {
+    width: 80%;
+    margin: 0 auto;
+    height: 5px;
+  }
+  .mainTxt h2,
+  #zipWrap .subTitle {
+    font-size: 1.5rem;
+  }
+  #zipWrap .subTitle {
+    padding-bottom: 3rem;
+  }
+
   .zipLeft ul {
     grid-template-columns: 1fr;
   }
@@ -1406,8 +1492,10 @@
   .zipText h2 {
     font-size: 0.7rem;
   }
+
+  /* 375advertise */
   #advertise .slide-captions .current-title {
-    font-size: 1.2rem;
+    font-size: 1.8rem;
   }
   #advertise .slide-captions .current-subtitle {
     font-size: 1rem;
@@ -1421,6 +1509,7 @@
   .slider__pagination {
     bottom: -1rem !important;
   }
+  /* 375snsPhotoWrap*/
   .snsPhotoWrap,
   #snsPhotoWrap2 {
     grid-template-columns: 1fr;
@@ -1429,10 +1518,51 @@
   .snsPhotoWrap .snsPhoto {
     height: 30vh;
   }
+
+  #snsWrap {
+    padding-top: 5rem;
+  }
+  .snsPhotoWrap {
+    height: initial;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+  #snsPhotoWrap1 .snsPhoto:nth-child(2) {
+    display: none;
+  }
+  #snsWrap {
+    padding-bottom: 8rem;
+    padding-top: 10rem;
+  }
+  #snsWrap .button {
+    margin: 8rem 0 0;
+  }
+  #snsPhotoWrap2 {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-bottom: 0;
+    grid-template-rows: 30vh;
+    display: none;
+    margin-top: 7rem;
+  }
+  #snsPhotoWrap2 .snsPhoto:nth-child(3) {
+    display: none;
+  }
+  .snsPhoto .hiddenText {
+    left: 1.5rem;
+    bottom: 1.5rem;
+  }
+  .hiddenText h3 {
+    font-size: 1rem;
+  }
+  .hiddenText span {
+    font-size: 0.8rem;
+  }
   /* 375package */
   #package {
     padding-top: 30rem;
   }
+
   #package .buttons {
     display: none;
   }
@@ -1458,6 +1588,9 @@
   .visualinner form div:nth-child(5) {
     height: 11vh;
   }
+  .subTxt {
+    width: initial;
+  }
   #subPackage h2,
   #subHotel h2 {
     font-size: 1.5rem;
@@ -1466,6 +1599,7 @@
   }
   .packageWrap {
     padding-top: 5rem;
+    padding-bottom: 10rem;
   }
   #special .mySwiper2 {
     transform: translateX(5rem);
@@ -1478,8 +1612,11 @@
     left: 1rem;
     bottom: -4rem;
   }
+  .discountCon ul {
+    grid-template-columns: 1fr;
+  }
   #discount {
-    padding-top: 5rem;
+    padding-top: 10rem;
   }
   .discountWrap .mainTxt {
     width: 90%;
@@ -1500,6 +1637,16 @@
   .verti {
     font-size: 1rem;
     top: 2rem;
+    left: 1rem;
+  }
+  #theme {
+    padding-top: 10rem;
+  }
+  .themeWrap {
+    height: 50vh;
+  }
+  .themeText {
+    left: 1rem;
   }
   .themeText h2 {
     font-size: 1.2rem;
@@ -1508,8 +1655,26 @@
     font-size: 0.8rem;
   }
   /* 375hotel */
+  #intro {
+    padding-top: 30rem;
+    padding-bottom: 10rem;
+  }
   #intro ul {
     flex-wrap: wrap;
+    gap: 1.5rem;
+  }
+  #intro ul li .img {
+    width: 9rem;
+    height: 9rem;
+  }
+  #intro ul li p img {
+    width: 65%;
+  }
+  #intro ul li:last-of-type p img {
+    width: 50%;
+  }
+  #hotel {
+    padding-bottom: 8rem;
   }
   .commonTxt h2 {
     font-size: 1.5rem;
@@ -1528,8 +1693,19 @@
   .commonCon ul li .percent {
     font-size: 1.5rem;
   }
+  #advertise .swiper-slide,
+  #adver .swiper-slide {
+    filter: brightness(80%);
+  }
+  #adver .slide-captions {
+    top: 20%;
+    transform: translateX(-50%);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
   #adver .slide-captions .current-title {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
   #adver .slide-captions .current-subtitle {
     font-size: 0.8rem;
@@ -1546,62 +1722,114 @@
   #adver {
     padding-bottom: 8rem;
   }
-  .clickWrap .clickCon ul li p {
-    font-size: 0.8rem;
+
+  .clickWrap .clickCon ul {
+    grid-template-columns: 1fr;
+    height: initial;
   }
+  .clickWrap .clickCon ul li {
+    height: 30vh;
+  }
+  .clickWrap .clickCon ul li p {
+    left: 1.5rem;
+    font-size: 1rem;
+  }
+  #clickBest {
+    width: 80%;
+    padding-bottom: var(--pBottom-sub-3);
+  }
+
   /* 375event */
+  .eventMain {
+    grid-template-columns: 1fr;
+  }
+  #subEvent {
+    padding-bottom: 10rem;
+  }
   #subEvent .mainTxt {
     padding-top: 12rem;
   }
+  #eventCon2 .commonCon ul,
   #eventCon1 .commonCon ul {
     grid-template-columns: 1fr;
   }
+
   /* 375customer */
+
   #subCst .mainTxt {
     padding-top: 12rem;
   }
+  #subCst p {
+    font-size: 1.2rem;
+  }
   #subCst .search input {
-    width: 60%;
+    width: 70%;
   }
   #custom {
-    padding-bottom: 10rem;
+    padding-top: 0;
+    padding-bottom: var(--pBottom-2);
   }
   #custom .icon {
-    column-gap: 1.5rem;
+    grid-template-columns: repeat(2, max(35%));
+    gap: initial;
+    row-gap: 4rem;
+    column-gap: 1rem;
+  }
+  .answerWrap {
+    margin: 0 1rem 0;
+  }
+  .answerWrap .answer {
+    font-size: 1rem;
+  }
+  .answerWrap.on {
+    margin: 0 1rem 2rem;
+  }
+  .icon li p {
+    font-size: 1rem;
+  }
+  .faqCon .head {
+    margin: 0;
   }
   .faqCon .head h3 {
     font-size: 1rem;
-    width: 90%;
-  }
-  .faqText p,
-  .announText p {
-    height: initial;
+    width: 75%;
+    margin-left: 1rem;
   }
   .plusIcon {
     width: 20px;
     height: 20px;
   }
   #faq {
-    padding-bottom: 8rem;
+    padding-bottom: var(--pBottom-sub-3);
+  }
+  .announText h3,
+  .faqText h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
   }
   .faqText p span,
   .announText p span {
-    font-size: 0.9rem;
-    padding: 1rem 0;
+    font-size: 1rem;
   }
-  .answerWrap {
-    margin: 0 3rem 0rem;
-    font-size: 0.9rem;
-  }
-  .answerWrap.on {
-    margin: 0 3rem 2rem;
+  #announ {
+    padding-bottom: var(--pBottom-sub-3);
   }
   .announCon {
     grid-template-columns: 1fr;
   }
-  .announCon .border h3 + p {
+  .announCon li h3 {
+    font-size: 1.2rem;
+  }
+  .announCon li h3 + p {
     font-size: 1rem;
   }
+  .announCon li {
+    padding: 2rem;
+  }
+  .announCon li p:last-child {
+    margin-top: 1rem;
+  }
+
   /* 375footer */
 
   .footer_top .fotoText {
@@ -1612,8 +1840,9 @@
   }
   .fotoText .number {
     text-align: left;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin: 0 auto;
+    width: 70%;
   }
   .fotoText .number span {
     margin-left: 0;
@@ -1643,7 +1872,7 @@
     display: block;
   }
   .fotoText .info + p {
-    padding-top: 8rem;
+    padding-top: 5rem;
     font-size: 1rem;
     text-align: center;
   }
@@ -1810,6 +2039,15 @@
     margin: 0 auto;
     height: 5px;
   }
+  .mainTxt h2,
+  #zipWrap .subTitle {
+    font-size: 1.5rem;
+  }
+  #zipWrap .subTitle {
+    padding-bottom: 3rem;
+  }
+
+  /* 320advertise */
   #advertise .slide-captions {
     width: 90%;
     top: 45%;
@@ -1821,17 +2059,10 @@
     font-size: 1rem;
   }
 
+  /* 320sns */
   #snsWrap {
     padding-top: 5rem;
   }
-  .mainTxt h2,
-  #zipWrap .subTitle {
-    font-size: 1.5rem;
-  }
-  #zipWrap .subTitle {
-    padding-bottom: 3rem;
-  }
-  /* 320sns */
   .snsPhotoWrap {
     height: initial;
     grid-template-columns: 1fr;
@@ -2091,20 +2322,10 @@
   .commonCon .price {
     font-size: 1.7rem;
   }
-  .clickWrap .clickCon ul {
-    grid-template-columns: 1fr;
-    height: initial;
-  }
-  .clickWrap .clickCon ul li {
-    height: 30vh;
-  }
-  .clickWrap .clickCon ul li p {
-    left: 1.5rem;
-    font-size: 1rem;
-  }
+
   #adver .slide-captions {
     left: 50%;
-    top: 20%;
+    top: 30%;
     transform: translateX(-50%);
     text-align: center;
     width: 90%;
@@ -2127,6 +2348,17 @@
   }
   #adver {
     padding-bottom: var(--pBottom-sub-3);
+  }
+  .clickWrap .clickCon ul {
+    grid-template-columns: 1fr;
+    height: initial;
+  }
+  .clickWrap .clickCon ul li {
+    height: 30vh;
+  }
+  .clickWrap .clickCon ul li p {
+    left: 1.5rem;
+    font-size: 1rem;
   }
   #clickBest {
     width: 80%;
